--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -62,6 +62,7 @@
         </div>
     </div>
 </div>
+{% block modal %}{% endblock %}
 <script src="{{ asset('plugins/global/plugins.bundle.js') }}"></script>
 <script src="{{ asset('js/scripts.bundle.js') }}"></script>
 {% block javascripts_footer '' %}
